Having issues with aligning the menu on mobile, error handling on the email form doesn't seem to work

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -47,6 +47,9 @@ img {
 	.cover {
 		padding: 0 20%;
 	}
+    .arrow {
+        bottom: 0;
+    }
 }
 
 .cover {
@@ -122,7 +125,7 @@ hr {
 .about {
     background: white;
     height: auto;
-    width: 80%;
+    width: 100%;
     margin: auto;
     h4 {
         text-align: center;
