--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -8,6 +8,19 @@ img {
     cursor: pointer;
 }
 
+.mainLogo {
+    height: 100px; 
+    width: 150px;
+    top: 20px;
+}
+
+@media (max-width: 956px) {
+    .mainLogo {
+        height: 75px;
+        width: 100px;
+    }
+}
+
 a, a:active, a:focus{
 	text-decoration: none;
 	outline: none;
@@ -46,6 +59,7 @@ h2{
     width: 17px;
     height: 50px;
 }
+
 
 #toggle ul li{
     position: relative;
@@ -148,7 +162,7 @@ nav#nav{
 	ul{
 		position: absolute;
         width: 100%;
-		top: 250px;
+		top: 200px;
         text-align: center;
 		list-style-type: none;
 		li{
@@ -206,10 +220,4 @@ section.panel#intro{
        color: #999;
     }
   }
-}
-
-@media (max-width: 956px) {
-    .mainLogo {
-        width: auto;
-    }
 }
